tests/snapshots/examples_fixtures/io__aoc_day12_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day12_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `str_at`.

  --> examples/io/aoc_day12_haskell_style.flx:60:13
   |
60 |     let t = str_at(tokens, idx)
   |             ^^^^^^

Hint:
  Define it first: let str_at = ...;


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with Array<Option<Int>>.

  --> examples/io/aoc_day12_haskell_style.flx:92:55
   |
92 |         parse_areas(lines, idx + 1, push(acc, [|w, h, counts|]))
   |                                                       ^^^^^^
   |                                                       ------ expected Int, found Array<Option<Int>>

Found 2 errors.
== stdout ==
<not executed>
